@@ -37,6 +37,9 @@ dcm4che API:
 + add org.dcm4che.net.AAssociation#listAcceptedPresContext
 + make org.dcm4cheri.data.DcmParserImpl tolerant for redundant
   Sequence Delimiter Items of Sequences with explicit length encoding
++ add org.dcm4che.data.FileMetaInfo#getImplementationClassUID
++ add org.dcm4che.data.FileMetaInfo#getImplementationVersionName
+
 
 CHANGES:
 dcm4che API:
